...
          tabBarIndicatorStyle: { backgroundColor: colors.primary },
          tabBarLabelStyle: { fontSize: 13, fontWeight: '700', textTransform: 'none' },
        }}
      >
        <MaterialTopTabs.Screen name="cercas" options={{ title: 'Cercas Virtuais' }} />
        <MaterialTopTabs.Screen name="velocidade" options={{ title: 'Velocidade' }} />
        <MaterialTopTabs.Screen name="conta" options={{ title: 'Conta' }} />
      </MaterialTopTabs>
    </View>
  );
}

const styles = StyleSheet.create({
...
